fixed layout overlap and spacing between box3,box4 and footer

--- a/style.css
+++ b/style.css
@@ -178,16 +178,19 @@ span{
 /** shop section **/
 .shop-section{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #e2e7e6;
+    gap: 20px;
+    padding: 20px;
 }
 
 .box{
-    height: 400px;
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
     margin-top: 15px;
+    height: auto;
 }
 
 .box-img{
@@ -310,7 +313,8 @@ ul a{
 .box3-img {
   width: 100%;
   height: 120px;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -362,7 +366,8 @@ ul a{
 .box4-img {
   width: 100%;
   height: 120px;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -384,6 +389,10 @@ ul a{
 .img6 { background-image: url("box4.2-img.jpg"); }
 .img7 { background-image: url("box4.3-img.jpg"); }
 .img8 { background-image: url("box4.4-img.jpg"); }
+
+.box3, .box4{
+    margin-bottom: 20px;
+}
 
 /* Make website responsive */
 
@@ -486,7 +495,7 @@ ul a{
     }
 
     .box{
-        width: 45%;
+        width: 90%;
         margin-bottom: 15px;
     }
 
